--- a/project.html
+++ b/project.html
@@ -61,7 +61,7 @@
 
   <div class="share">
 
-    <p>check out my</p>
+    <p>check out my:</p>
 
     <div class="social">
       <a href="#"><img src="https://img.icons8.com/?size=100&id=118487&format=png&color=000000" alt="fb" width="40px" height="40px"></a>
