--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="home-image">
 
-      <img src="file:///home/jacob/Downloads/FB_IMG_16602409607395028-1.jpg" alt="Jacob" width="530px" height="530px">
+      <img src="FB_IMG_16602409607395028-1.jpg" alt="Jacob" width="530px" height="530px">
 
     </div>
 
